# photo-s3

./: .gitignore  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0cfd6ed83f20_new_table_tags.py  2af8f5e7f45f_new_table_rate.py  dca9d226272c_new_table_exif.py  eec9e131231c_new_table_photos.py
photo_s3_bucket/: container.py  main.py
photo_s3_bucket/libs/: image_lister.py  rating.py  tags_service.py  thumbnailizer.py
photo_s3_bucket/models/: exif.py  photo.py  rate.py  tag.py
photo_s3_bucket/pages/: details.py  gallery_segment.py  navigation.py  rate.py  search.py  tags.py  vote.py
photo_s3_bucket/repositories/: exif.py  photo.py  rate.py  tag.py
photo_s3_bucket/templates/: details.html  gallery_segment.html  navigation.html  search.html  tags.html  vote.html
tests/: test_folder.py  test_gallery_segment.py  test_rating.py  test_tags.py  test_thumbnailizer.py
tools/: categorize_all_images.py  import_all_images.py  setup_table.py  setup_table_tags.py  test_get_exif_range.py  thumbnailize_all_images.py
